--- a/Project/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Project/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,7 +9,14 @@
     <div class="card-header bg-secondary bg-gradient ml-0 py-4">
         <div class="row">
             <div class="col-12 text-center">
+                @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                {
+                    <h2 class="py-2 text-white">Register - Admin Protal</h2>
+                }
+                else 
+                {
                 <h2 class="py-2 text-white">Register</h2>
+                }
             </div>
         </div>
     </div>
@@ -68,23 +75,27 @@
                         <label asp-for="Input.PhoneNumber">Phone Number</label>
                         <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                     </div>
+                    @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
+                    {
+                        <div class="form-floating col-md-6">
+                            <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
+                                <option disabled selected>--Select Role--</option>
+                            </select>
+                        </div>
 
-                    <div class="form-floating col-md-6">
-                        <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
-                            <option disabled selected>--Select Role--</option>
-                        </select>
-                    </div>
-
-                    <div class="form-floating col-md-6">
-                        <select asp-for="Input.CompanyId"style="display:none" asp-items="@Model.Input.CompanyList" class="form-select">
-                            <option disabled selected>--Select Company--</option>
-                        </select>
-                    </div>
+                        <div class="form-floating col-md-6">
+                            <select asp-for="Input.CompanyId"style="display:none" asp-items="@Model.Input.CompanyList" class="form-select">
+                                <option disabled selected>--Select Company--</option>
+                            </select>
+                        </div>
+                    }
                     <div class="col-md-12">
                         <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
                     </div>
                 </form>
             </div>
+            @if (!(User.IsInRole(SD.Role_Admin) && User.IsInRole(SD.Role_Employee)))
+            {
             <div class="col-md-12">
                 <section>
                     <p class="divider-text d-flex pt-2">or</p>
@@ -118,6 +129,7 @@
                     }
                 </section>
             </div>
+            }
         </div>
 
     </div>
